added protobuf representation of watcher index
